# web-labs

./: .gitignore  README.md  build_protos.sh  create_db.sql  db_setup.sh  deploy.sh  install_drogon.sh  install_graphql.sh  install_grpc.sh  prebuild.sh  script.sh
docs/: register_user.txt  swap_ips.txt
generated_protos/protos/: image_service.grpc.pb.cc  image_service.grpc.pb.h  image_service.pb.cc  image_service.pb.h  image_serviice.grpc.pb.cc  image_serviice.grpc.pb.h  image_serviice.pb.cc  image_serviice.pb.h
graphql/: query_exaple.graphql
image_service/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grpc_functions.cc  grpc_functions.h  image_client.cc  image_service.cc  script.sh
our-chat/: CMakeLists.txt  config.json  main.cc  rebuild.sh
our-chat/controllers/: MessagesController.cc  MessagesController.h  PhotoController.cc  PhotoController.h  UserInfoController.cc  UserInfoController.h  UserRegistrationController.cc  UserRegistrationController.h
our-chat/files/: chat_list.html  chat_with_user.html  profile.html
our-chat/filters/: LoginFilter.cc  LoginFilter.h
our-chat/test/: CMakeLists.txt
protos/: image_service.proto  image_serviice.proto
sql/: Friendships.sql  Messages.sql  User.sql  Users.sql  UsersChats.sql
